# fnos-git-auth

./: .gitignore  README.md  fnos-git-auth-linux-x86_64.spec  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build.py  install.ps1  install.sh
src/: __init__.py  auth.py  cli.py  config.py  credentials.py  crypto.py  diagnostic.py  git_config.py  git_hooks.py  update.py  utils.py  ws_client.py
tests/: conftest.py  test_cli.py  test_config.py  test_crypto.py  test_git_hooks.py  test_integration.py  test_login.py
